# AutoType

./: .gitignore  README.md  package.json  start-all.bat  vite.config.js
cli/: .gitignore  LICENSE  main.py  requirements.txt  脚本.md
cli/app/: __init__.py  config.py  funasr_server.py  hotkeys.py  transcribe.py
gui/: .gitignore  index.html  overlay.html  package-lock.json  package.json
gui/src/: main.js  overlay.html  style.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: audio_fix.rs  main.rs  main.rs.original
gui/src-tauri/src-nodejs/: package-lock.json  package.json  server.js
logs/: monitor.ps1  watch.bat
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src-nodejs/: package.json  server.js
