[package]
name = "vocotype-gui"
version = "1.0.0"
description = "VocoType - 语音转文字"
authors = ["vocotype"]
license = "MIT"
edition = "2021"
rust-version = "1.69"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "vocotype-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open", "global-shortcut-all", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "notification-all", "os-all", "path-all", "shell-execute", "window-close", "window-hide", "window-show"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 音频处理
cpal = "0.15"
hound = "3.5"
ringbuf = "0.4"

# 异步处理
tokio = { version = "1.35", features = ["full"] }

# 时间和路径
chrono = "0.4"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
